fix button and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1048,6 +1048,16 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  overflow: hidden;
+}
+
+.container,
+.relative-svg-container {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .navbar-fixed {
   position: fixed;
   z-index: 99999;
@@ -1103,11 +1113,8 @@ a.button {
   text-align: center;
   text-decoration: none;
   padding: 1rem 2rem;
-  /* Adjust padding as necessary */
   margin: 0.5rem 0;
-  /* Add margin if necessary */
   cursor: pointer;
-  /* Add pointer cursor */
 }
 
 /* Responsive button styling */
@@ -1131,18 +1138,25 @@ a.button {
   margin: 0 auto;
   position: relative;
   /* Ensure the image is above the SVG */
-  z-index: 1;
+  z-index: 99;
   /* Higher z-index to be on top */
 }
 
 .relative-svg-container svg {
   position: absolute;
   bottom: 0;
+  /* Menempatkan SVG di bagian bawah container */
   left: 50%;
-  transform: translateX(-50%) scale(1);
-  /* Ensure the SVG maintains its size */
-  z-index: 0;
-  /* Lower z-index to be behind */
+  /* Menempatkan SVG di tengah horizontal */
+  transform: translateX(-50%);
+  /* Menggeser SVG ke kiri sejauh setengah lebar container */
+  z-index: -1;
+  /* Memastikan SVG berada di belakang teks */
+}
+
+.line-break::after {
+  content: "";
+  display: block;
 }
 
 .hover\:bg-cyan1:hover {
